// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My Range Label
  </label>
  <input
    id="id-1-1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="50"
  />
  <span>
    50
  </span>
</div>
`;

exports[`Range component handling input should set a value when passed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-2-1"
  >
    My Label
  </label>
  <input
    id="id-2-1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="23"
  />
  <span>
    23
  </span>
</div>
`;

exports[`Range component handling input should update a value when changed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-3-1"
  >
    My Label
  </label>
  <input
    id="id-3-1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="23"
  />
  <span>
    23
  </span>
</div>
`;
